--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "test": "node scripts/test.js --env=jsdom"
   },
   "devDependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "redux-devtools": "^3.4.1"
   },
   "jest": {
@@ -98,6 +99,7 @@
       "react-app"
     ],
     "plugins": [
+      ["transform-decorators-legacy"],
       [
         "import",
         {
