--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "resolve": "1.6.0",
@@ -99,7 +100,9 @@
       "react-app"
     ],
     "plugins": [
-      ["transform-decorators-legacy"],
+      [
+        "transform-decorators-legacy"
+      ],
       [
         "import",
         {
